<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".features.artwork.presentation.ui.list.ArtworksListFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivFilterArts"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_filter_list"
        android:tooltipText="@string/iv_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvArtworks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivFilterArts"
        tools:listitem="@layout/item_artwork" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabScanQr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_qr_code_scanner"
        android:tooltipText="@string/fab_scan_qr_tooltip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til"
        style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox.Dense"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginRight="16dp"
        android:hint="@string/hint_search"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="@id/ivFilterArts"
        app:layout_constraintEnd_toStartOf="@id/ivFilterArts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSearchArt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>