<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".features.ticket.presentation.ui.detail.TicketDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/qrCodeImageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/titleTextView"
            style="@style/DetailOfListItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:textColor="@color/black"
            tools:text="Life and Afterlife in Ancient Egypt" />

        <TextView
            android:id="@+id/exhibitionIdTextView"
            style="@style/DetailOfListItemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            tools:text="exhibitionId" />

        <TextView
            android:id="@+id/descriptionTextView"
            style="@style/DetailOfListItemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp" />
        <TextView
            android:id="@+id/aicStartAtTextView"
            style="@style/DetailOfListItemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/exhibition_start" />

        <TextView
            android:id="@+id/aicEndAtTextView"
            style="@style/DetailOfListItemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/exhibition_end" />

        <Button
            android:id="@+id/undoTicketButton"
            style="@style/DetailOfListItemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:visibility="invisible"
            android:text="@string/undo_label_button"
            />


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteTicketButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:contentDescription="Delete ticket"
        android:src="@drawable/ic_remove_shopping_cart"
        app:backgroundTint="@color/zxing_viewfinder_laser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/colorAccent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addCalendarEventButton"
        android:layout_width="wrap_content"
        android:layout_height="68dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"

        android:contentDescription="Make calendar event"
        android:src="@drawable/ic_event_note"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>